-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.1

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2016 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.1
-----------------

1/26/16
    - Introduced work-around and warning for crashes caused by strange
      behavior from Matlab's ver() function when MATPOWER (or any other
      3rd party toolbox with a Contents.m) is installed in a directory on
      the Matlab path named 'matlab' or 'optim' (both case insensitive).

1/15/16
    - Added feval_w_path() function for evaluating functions located at
      a specified path, outside of the Matlab path.

1/14/16
    - Added tests for loadcase() for m-file cases outside the Matlab path.

1/6/16
    - Added apply_changes() and idx_ct() to implement general method for
      applying modifications to an existing MATPOWER case.

11/5/15
    - Use voltage dependent loads in both base and target injections
      to define continuation power flow transfer. Should fix issue with
      calculation of final loads.

10/15/15
    - Modified t_is() to handle matrix inputs of dimension greater
      than two.
    - Added t_test_fcns() to test t_ok() and t_is() and manually
      check output of failed tests.
    - Added tests to t_dcline() for an isolated generator bus connected
      to the rest of the system via a DC line. This works for AC and DC
      power flow and OPF, though you must set the isolated bus to
      be of type REF.

9/23/15
    - Added code in cplex_options(), insolvablepfsos(),
      insolvablepfsos_limitQ() and yalmip_options() to turn off
      'MATLAB:lang:badlyScopedReturnValue' warning triggered by
      CPLEX when using Matlab R2015b (8.6) and later.

7/16/15
    - Added mpopt2qpopt() to provide common interface for creating
      options struct for mi/qps_matpower() from a MATPOWER options